updated nav margin to correct dropdown visibility

--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ h3{
  #navbarNavDropdown{
 
     max-width:1500px;
+    margin-right:3em;
  }
 
  .navbar-brand{
